force-app/main/default/objects/due__Tagging__c/due__Tagging__c.object-meta.xml
<CustomObject>
    <label>Tagging</label>
    <nameField>
        <label>Tag Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Taggings</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>