force-app/main/default/objects/due__Tagging__c/fields/due__Auto__c.field-meta.xml
<CustomField>
    <fullName>due__Auto__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Auto</label>
    <type>Checkbox</type>
</CustomField>