force-app/main/default/objects/due__Tagging__c/fields/due__CreatedAt__c.field-meta.xml
<CustomField>
    <fullName>due__CreatedAt__c</fullName>
    <label>CreatedAt</label>
    <type>DateTime</type>
</CustomField>