force-app/main/default/objects/due__Tagging__c/fields/due__Feeling__c.field-meta.xml
<CustomField>
    <fullName>due__Feeling__c</fullName>
    <label>Feeling</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>negative</fullName>
                <color>#CC0000</color>
                <label>Negative</label>
            </value>
            <value>
                <fullName>neutral</fullName>
                <color>#999999</color>
                <label>Neutral</label>
            </value>
            <value>
                <fullName>positive</fullName>
                <color>#33CC00</color>
                <label>Positive</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>