force-app/main/default/objects/due__Tagging__c/fields/due__Kind__c.field-meta.xml
<CustomField>
    <fullName>due__Kind__c</fullName>
    <label>Kind</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>tag</fullName>
            </value>
            <value>
                <fullName>root_cause</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>