force-app/main/default/objects/due__Tagging__c/fields/due__Tag__c.field-meta.xml
<CustomField>
    <fullName>due__Tag__c</fullName>
    <label>Tag</label>
    <referenceTo>due__Tag__c</referenceTo>
    <relationshipLabel>Taggings</relationshipLabel>
    <relationshipName>Taggings</relationshipName>
    <relationshipOrder>1</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>